# chemical_reactor_parameter_optimization_platform

./: .gitignore  README.md  app.py  chemical_reactor_app.py  dashboard_app.py  data.json  eda_assistant_app.py  pyproject.toml  requirements.txt  run_reactor_app.bat
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: roadmap.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_006779c7517b14df___init___py.html  z_006779c7517b14df_history_py.html  z_006779c7517b14df_outlier_py.html  z_006779c7517b14df_preprocessing_py.html  z_006779c7517b14df_profile_py.html  z_006779c7517b14df_recommendation_py.html  z_006779c7517b14df_report_py.html  z_006779c7517b14df_sample_py.html  z_006779c7517b14df_visualization_py.html  z_1510db27cec6a96b___init___py.html  z_d95e16bd23fe395d___init___py.html  z_d95e16bd23fe395d_registry_py.html  z_d95e16bd23fe395d_schema_py.html  z_d95e16bd23fe395d_validators_py.html  z_f059bfea681a766c___init___py.html  z_f059bfea681a766c_base_py.html  z_f059bfea681a766c_cstr_py.html  z_fafbdd2bb773fee6_energy_py.html  z_fafbdd2bb773fee6_explain_py.html  z_fafbdd2bb773fee6_kinetics_py.html  z_fafbdd2bb773fee6_reactions_py.html  z_fafbdd2bb773fee6_scenario_lab_py.html  z_fafbdd2bb773fee6_thermo_py.html  z_fafbdd2bb773fee6_units_py.html
reactor_platform/: README.md  __init__.py  demo.py
reactor_platform/core/: __init__.py  energy.py  explain.py  kinetics.py  reactions.py  scenario_lab.py  thermo.py  units.py
reactor_platform/eda/: __init__.py  history.py  outlier.py  preprocessing.py  profile.py  recommendation.py  report.py  sample.py  ui.py  visualization.py
reactor_platform/parameters/: __init__.py  registry.py  schema.py  validators.py
reactor_platform/tests/: test_cstr.py  test_eda_history.py  test_eda_outlier.py  test_eda_preprocessing.py  test_eda_profile.py  test_eda_recommendation.py  test_eda_report_viz.py  test_energy.py  (+6 more)
(+11 files in other folders)
