[project]
name = "reactor_platform"
version = "0.1.0"
description = "AI-based chemical reactor optimization & economic analysis platform (parameter-driven, self-documenting)."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.5", "mypy>=1.8"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["reactor_platform/tests"]

[tool.coverage.run]
relative_files = true
source = ["reactor_platform"]
omit = ["reactor_platform/tests/*", "reactor_platform/demo.py"]
