[project]
name = "reactor_platform"
version = "0.1.0"
description = "AI-based chemical reactor optimization & economic analysis platform (parameter-driven, self-documenting)."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.5", "mypy>=1.8"]
# EDA Assistant 부가 기능(계산 코어와 분리). `pip install .[eda]`
eda = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "streamlit>=1.30",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["reactor_platform/tests"]

[tool.coverage.run]
relative_files = true
source = ["reactor_platform"]
omit = [
    "reactor_platform/tests/*",
    "reactor_platform/demo.py",
    # Streamlit UI 계층(라이브 세션 필요, 단위 테스트 불가) — 배지는 테스트된 로직만 반영.
    "reactor_platform/eda/ui.py",
    "reactor_platform/webui/*",
]
